--- a/css/croissant-design.webflow.css
+++ b/css/croissant-design.webflow.css
@@ -431,6 +431,7 @@ a {
   display: -ms-flexbox;
   display: flex;
   overflow: hidden;
+  height: 60vh;
   padding-top: 200px;
   padding-bottom: 200px;
   -webkit-box-align: center;
