--- a/css/croissant-design.webflow.css
+++ b/css/croissant-design.webflow.css
@@ -431,13 +431,17 @@ a {
   display: -ms-flexbox;
   display: flex;
   overflow: hidden;
-  height: 60vh;
+  height: 70vh;
   padding-top: 200px;
   padding-bottom: 200px;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.s-content.page-contact {
+  height: 100vh;
 }
 
 .s-content-white-lines {
@@ -507,7 +511,12 @@ a {
 .split-left {
   max-width: 55%;
   margin-right: 0px;
+  margin-bottom: 10px;
   margin-left: 0px;
+}
+
+.split-left.page-contact {
+  margin-bottom: 10vh;
 }
 
 .flex-split-wrapper {
@@ -515,7 +524,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
@@ -526,12 +535,17 @@ a {
   align-items: stretch;
 }
 
+.flex-split-wrapper.page-contact {
+  display: block;
+}
+
 .split-right {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   max-width: 40%;
+  margin-bottom: 10px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -608,7 +622,7 @@ a {
 }
 
 .small-logo.logo {
-  max-width: 20%;
+  max-width: 2em;
 }
 
 .read-more-icon {
@@ -1705,17 +1719,9 @@ a {
     text-align: center;
   }
 
-  .flex-split-wrapper {
-    margin-bottom: 100px;
-  }
-
   .video-wrapper {
     width: 100%;
     margin-bottom: 50px;
-  }
-
-  .small-logo.logo {
-    max-width: 20%;
   }
 
   .menu-wrapper {
@@ -1855,6 +1861,7 @@ a {
   }
 
   .s-content {
+    height: auto;
     padding-top: 100px;
     padding-bottom: 100px;
   }
@@ -1880,7 +1887,6 @@ a {
 
   .split-left {
     max-width: 100%;
-    margin-bottom: 50px;
   }
 
   .flex-split-wrapper {
@@ -1899,10 +1905,6 @@ a {
     padding-right: 40px;
     padding-bottom: 25px;
     padding-left: 40px;
-  }
-
-  .small-logo.logo {
-    max-width: 2em;
   }
 
   .read-more-icon {
